# bpcs

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  VERSIONING.md  bpcs.cpp  bpcs_cuda.cu  colours.hpp  config.h  fmt.cpp  makefile  units.h  utils.hpp
doc/: bpcs-fmt.1.md  bpcs-fmt.md  bpcs-v.1.md  bpcs.1.md  bpcs.3.md  bpcs.md
src/: bpcs.cpp  bpcs.hpp  bpcs_cuda.cu  config.h  errors.hpp  fmt.cpp  fmt_os.cpp  fmt_os.hpp  logger.hpp  main.cpp  os.cpp  os.hpp  png.hpp  std_file_handles.cpp  std_file_handles.hpp  typedefs.hpp  units.h  utils.hpp
